11 June 2012: Wouter
	- bug #452: fix crash on assert in mesh_state_attachment.

30 May 2012: Wouter
	- silence warning from swig-generated code (md set but not used in
	  swig initmodule, due to ifdefs in swig-generated code).

27 May 2012: Wouter
	- Fix debian-bugs-658021: Please enable hardened build flags.

25 May 2012: Wouter
	- updated iana ports list.

24 May 2012: Wouter
	- tag for 1.4.17 release.
	- trunk is 1.4.18 in development.

18 May 2012: Wouter
	- Review comments, removed duplicate memset to zero in delegpt.

16 May 2012: Wouter
	- Updated doc/FEATURES with RFCs that are implemented but not listed.
	- Protect if statements in val_anchor for compile without locks.
	- tag for 1.4.17rc1.

15 May 2012: Wouter
	- fix configure ECDSA support in ldns detection for windows compile.
	- fix possible uninitialised variable in windows pipe implementation.

9 May 2012: Wouter
	- Fix alignment problem in util/random on sparc64/freebsd.

8 May 2012: Wouter
	- Fix for accept spinning reported by OpenBSD.
	- iana portlist updated.

2 May 2012: Wouter
	- Fix validation of nodata for DS query in NSEC zones, reported by
	  Ondrej Mikle.

13 April 2012: Wouter
	- ECDSA support (RFC 6605) by default. Use --disable-ecdsa for older
	  openssl.

10 April 2012: Wouter
	- Applied patch from Daisuke HIGASHI for rrset-roundrobin and
	  minimal-responses features.
	- iana portlist updated.

5 April 2012: Wouter
	- fix bug #443: --with-chroot-dir not honoured by configure.
	- fix bug #444: setusercontext was called too late (thanks Bjorn
	  Ketelaars).

27 March 2012: Wouter
	- fix bug #442: Fix that Makefile depends on pythonmod headers
	  even using --without-pythonmodule.

22 March 2012: Wouter
	- contrib/validation-reporter follows rotated log file (patch from
	  Augie Schwer).

21 March 2012: Wouter
	- new approach to NS fetches for DS lookup that works with
	  cornercases, and is more robust and considers forwarders.

19 March 2012: Wouter
	- iana portlist updated.